shrink the center circle to none on click

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Pulsating Circle Animation</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   </head>
   <body>
     <!-- SVG element containing the pulsating circle -->
