feat: added objective

--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
         <script src="script.js"></script>
       </head>
       <body>
-        <div class="center">
-          <img
-            class="nameplate zoom-out"
-            src="nameplate.png"
-            alt="Samagra Tech"
-          />
-          <p id="message" class="nameplate fade-in"></p>
+        <p id="message"></p>
+        <div class="nameplate">
+          <img class="fade-in" src="nameplate.png" alt="Samagra Tech" />
+          <p class="tagline fade-in">Solve Systemically, Impact Holistically</p>
         </div>
       </body>
     </html>
